# exogress-python

./: .gitignore  Cargo.toml  Exofile.yml  pyproject.toml
.github/workflows/: check.yaml  release.yaml
example-py/: main.py
src/: lib.rs
