[package]
name = "exogress"
version = "0.1.0-alpha.2"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[lib]
name = "exogress"
crate-type = ["cdylib"]

[dependencies]
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.2.0", features = ["client-core", "tunnel", "config-core", "entities", "common-utils"], default-features = false }
pyo3 = { version = "0.13", features = ["extension-module"] }
shadow-clone = "1.2.1"
futures = "0.3.5"
trust-dns-resolver = "0.20.0"
hashbrown = "0.11.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "parking_lot"] }
anyhow = "1.0.41"
pyo3-log = "0.3.1"
log = "0.4.14"
parking_lot = "0.11.1"

